--- a/Buoi21(REACT)/REACT/giohang/package.json
+++ b/Buoi21(REACT)/REACT/giohang/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bai1",
+  "name": "giohang",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,10 +12,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.2",
-    "sweetalert2": "^11.12.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
